# os

./: Cargo.toml  Dockerfile  README.md  os.sh
.old/dri/bcm2711/: dwhci.rs  emmc.rs  framebuffer.rs  gpio.rs  mailbox.rs  mod.rs
.old/kernel/: Cargo.toml  README.md
.old/kernel/.cargo/: config
.old/kernel/src/: spi.rs
.old/kernel/src/arch/: mod.rs
.old/kernel/src/arch/aarch64/: exceptions.rs  mod.rs
.old/kernel/src/arch/amd64/: exceptions.rs  mod.rs
.old/kernel/src/arch/riscv/: exceptions.rs  mod.rs
.old/kernel/src/boot/: albl.rs  mod.rs  none.rs  sbi.rs  uefi.rs
.old/pkg/: Cargo.toml
.old/shell/src/: main.rs
.old/sys-ctrl/: Cargo.toml
.old/sys-ctrl/src/: main.rs
fw/: Cargo.toml
fw/src/: main.rs
fw/src/uefi/: mod.rs  system_table.rs
hw/: Cargo.toml
hw/src/: font.rs  lib.rs  utils.rs
hw/src/acpi/: mod.rs
hw/src/ahci/: mod.rs
hw/src/arch/: mod.rs
hw/src/devtree/: mod.rs
hw/src/gpt/: mod.rs
hw/src/nvme/: mod.rs
hw/src/pcie/: mod.rs  vendors.rs
kernel/: Cargo.toml
kernel/src/: lib.rs  log.rs  main.rs  mnt.rs
session/: Cargo.toml
sys/: Cargo.toml
sys/src/: main.rs
targets/: aarch64-qemu-none.ld  aarch64-unknown-none.json  aarch64-unknown-pcsi.json  aarch64-unknown-uefi.json  aarch64.ld  amd64.ld  riscv128gc-unknown-none.json  riscv128gc-unknown-sbi.json  riscv128gc-unknown-uefi.json  riscv32gc-unknown-none.json  riscv32gc-unknown-sbi.json  riscv32gc-unknown-uefi.json  riscv64gc-qemu-none.ld  riscv64gc-qemu-sbi.ld  riscv64gc-unknown-none.json  riscv64gc-unknown-sbi.json  riscv64gc-unknown-uefi.json  riscv64gc.ld
(+59 files in other folders)
