[workspace]
members = [
    "fw",
    "kernel",
    "session",
    "hw"
]

[profile.dev]
panic            = "abort"
opt-level        = 2

[profile.release]
panic            = "abort"
opt-level        = "z"
debug            = false
debug-assertions = false
overflow-checks  = false
# disable this for riscv UEFI target
lto              = true
codegen-units    = 1
