[package]
name         = "fw"
version      = "0.1.0"
authors      = ["Tobias Pfeiffer <tobias.pfeiffer@3d7eed74.net>"]
edition      = "2021"
rust-version = "1.66"
publish      = false
repository   = ""
license      = "MIT"
description  = "Firmware running at EL3/M-level if none is provided by the environment"

[dependencies]
